shared/src/shared/assets/styles/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
	font-family: "favorit";
	src: url("../fonts/ABCFavorit-Bold.woff2");
}

@font-face {
	font-family: "Fira Code";
	src: url("../fonts/FiraCode-Light.ttf");
}

/* for the notch */
html {
	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
}

/* @media screen and (min-width: 1600px) {
  html {
    font-size: 25px;
  }
} */

@layer base {
	body {
		@apply font-inter;
	}

	code {
		@apply font-firaCode;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		@apply font-favorit;
		@apply font-bold;
	}

	h1 {
		@apply lg:text-h1-large-d text-h1-large-m;
	}

	h1 small {
		@apply lg:text-h1-small-d text-h1-small-m;
	}

	h2 {
		@apply lg:text-h2-d text-h2-m;
	}

	h3 {
		@apply lg:text-h3-d text-h3-m;
	}

	h4 {
		@apply lg:text-h4-d text-h4-m;
	}

	h5 {
		@apply lg:text-h5-d text-h5-m;
	}

	h6 {
		@apply lg:text-h6-d text-h6-m;
	}

	a {
		@apply text-lightIris;
	}
}

@layer components {
	.button {
		@apply mb-0 min-h-[3.375rem] grow-0 px-[2.75rem] pb-[1.1rem] pt-[1.15rem] text-center text-[1rem] font-[700] leading-[1rem];
	}

	.button:disabled {
		@apply bg-storm text-rock;
	}

	.button.button--light-bg:disabled {
		@apply bg-casper text-storm;
	}

	.input-group label {
		@apply text-body-smallest;
	}

	.input-group {
		@apply text-cloud flex w-full flex-col;
	}

	.input-group + .button,
	.input-group + .input-group,
	.button + .input-group {
		@apply mt-4;
	}

	.input-group label + input[type="email"],
	.input-group label + input[type="password"],
	.input-group label + input[type="search"],
	.input-group label + input[type="tel"],
	.input-group label + input[type="text"],
	.input-group label + input[type="url"],
	.input-group label + input[type="text"],
	.input-group label + textarea {
		@apply mt-1;
	}

	.input-group input[type="email"],
	.input-group input[type="password"],
	.input-group input[type="search"],
	.input-group input[type="tel"],
	.input-group input[type="text"],
	.input-group input[type="url"],
	.input-group input[type="text"] {
		@apply min-h-[3.375rem];
	}

	.input-group textarea {
		@apply min-h-[8rem];
	}

	.input-group input[type="checkbox"] {
		@apply border-stone checked:bg-meadow h-4 w-4 appearance-none border-2;
	}

	.input-group input[type="email"],
	.input-group input[type="password"],
	.input-group input[type="search"],
	.input-group input[type="tel"],
	.input-group input[type="text"],
	.input-group input[type="url"],
	.input-group input[type="text"],
	.input-group textarea {
		@apply placeholder:text-stone bg-almostBlack w-full px-[1rem] pb-[1.1rem] pt-[1.15rem] text-[1rem] leading-[1rem];
	}

	.small-icon svg {
		@apply w-[0.8rem];
	}

	.big-icon svg {
		@apply w-[1.4rem];
	}
}

@layer utilities {
	.form--inline {
		@apply flex items-end;
	}

	.form--inline .input-group {
		@apply grow;
	}

	.form--inline .input-group input[type="email"],
	.form--inline .input-group input[type="password"],
	.form--inline .input-group input[type="search"],
	.form--inline .input-group input[type="tel"],
	.form--inline .input-group input[type="text"],
	.form--inline .input-group input[type="url"],
	.form--inline .input-group input[type="text"] {
		@apply w-full;
	}

	.form--inline .input-group + .button,
	.form--inline .input-group + .input-group,
	.form--inline .button + .input-group {
		@apply mt-0 ml-4;
	}

	.input-group--light-bg {
		@apply text-rock;
	}

	.input-group--light-bg input[type="email"],
	.input-group--light-bg input[type="password"],
	.input-group--light-bg input[type="search"],
	.input-group--light-bg input[type="tel"],
	.input-group--light-bg input[type="text"],
	.input-group--light-bg input[type="url"],
	.input-group--light-bg input[type="text"],
	.input-group--light-bg textarea {
		@apply bg-cloud;
	}

	.button--small {
		@apply min-h-[2.375rem] px-[0.6875rem] pb-[0.65rem] pt-[0.725rem];
	}

	.button--mini {
		@apply min-h-[1.625rem] min-w-[4.75rem] px-[0.475rem] pb-[0.375rem] pt-[0.5rem] leading-[0.75rem];
	}

	.button--primary {
		@apply bg-meadow text-darkCharcoal;
	}

	.button--primary.button--alternative {
		@apply bg-white;
	}

	.button--primary.button--alternative:hover {
		@apply bg-mintChip;
	}

	.button--secondary {
		@apply bg-rock text-meadow;
	}

	.button--block {
		@apply w-full;
	}

	.button--main-nav {
		@apply border-t-4 border-transparent px-0 text-[1rem] font-[600] leading-[1.125rem];
		@apply after:relative after:top-[1.45rem] after:block after:border-b-4 after:border-transparent;
	}

	.button--main-nav.button--active {
		@apply after:border-lightIris;
	}

	.astro-code {
		@apply overflow-hidden py-7 px-10;
	}

	.bg-fingerprint {
		background-image: url("/shared/fingerprint.svg");
		background-repeat: no-repeat;
		background-position: right 16rem top;
	}

	.bg-starburst {
		background-image: url("/shared/starburst.svg");
		background-repeat: no-repeat;
		background-position: 21rem top;
		background-size: 42.75rem;
	}

	.bg-saturn {
		background-image: url("/shared/saturn.svg");
		background-repeat: no-repeat;
		background-position: 22rem top;
		background-size: 30rem;
	}

	.bg-blur {
		-webkit-backdrop-filter: blur(10px);
		backdrop-filter: blur(10px);
	}
}

